# vk_edu_cpp_projects

./: README.md
hw1/: CMakeLists.txt
hw1/include/: foo.hpp  movie_data_processing.hpp
hw1/src/: foo.cpp  functions.cpp  main.cpp  movie_data_processing.cpp
hw2/: CMakeLists.txt  CPPLINT.cfg  README.md
hw2/include/: commands_processing.hpp  operations.hpp
hw2/src/: commands_processing.cpp  main.cpp  operations.cpp
hw3_5/: README.md
hw3_5/include/: recommendation.hpp
hw3_5/lib/filtering/include/: filtering.hpp
hw3_5/lib/filtering/test/: filtering_test.cpp
hw3_5/lib/filtering/test/src/: filtering_test.cpp
hw3_5/lib/text_processing/include/: tfidf_vectorization.hpp
hw3_5/lib/text_processing/test/src/: stemmizer_test.cpp
hw3_5/recommendation/src/: recommendation.cpp
